# fpsdot

./: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt  run-silent.bat  run.bat
.github/workflows/: ci.yml  release.yml
src/: config.py  crosshair.py  hotkeys.py  main.py  overlay.py  settings_window.py  window_focus.py
tests/: conftest.py  test_config.py  test_crosshair.py  test_hotkeys.py  test_window_focus.py
